% of Total Rides chart and code.

--- a/PyBer.ipynb
+++ b/PyBer.ipynb
@@ -3385,7 +3385,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "eee384d9",
+   "id": "c615a33b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3397,7 +3397,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "4e34093d",
+   "id": "811ec292",
    "metadata": {},
    "outputs": [
     {
@@ -3479,7 +3479,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "7315c0b3",
+   "id": "ef93c1c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3489,7 +3489,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "249ce3e9",
+   "id": "1aa63e87",
    "metadata": {},
    "outputs": [
     {
@@ -3514,7 +3514,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "fffadad6",
+   "id": "b1bcc45d",
    "metadata": {},
    "outputs": [
     {
@@ -3596,7 +3596,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "ddf182d2",
+   "id": "98250543",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3606,7 +3606,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "a9437307",
+   "id": "d45afcce",
    "metadata": {},
    "outputs": [
     {
@@ -3635,7 +3635,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "5ab2a908",
+   "id": "97a3c2e1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3645,7 +3645,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "d539df9d",
+   "id": "a0248f3c",
    "metadata": {},
    "outputs": [
     {
@@ -3670,7 +3670,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "006d1bee",
+   "id": "afc3fc45",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3680,7 +3680,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "b98398a6",
+   "id": "400aab89",
    "metadata": {},
    "outputs": [
     {
@@ -3719,7 +3719,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "6fe9fdac",
+   "id": "66e3182e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3729,7 +3729,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "8e31efa3",
+   "id": "8520d59c",
    "metadata": {},
    "outputs": [
     {
@@ -3781,11 +3781,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c249302f",
+   "execution_count": 112,
+   "id": "4ffbda57",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# using the \"groupby\" function on the \"pyber_data_df\"  we will use \"ride_id\" rather then \"fare\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "id": "4e75eaa3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "type\n",
+       "Rural        5.263158\n",
+       "Suburban    26.315789\n",
+       "Urban       68.421053\n",
+       "Name: ride_id, dtype: float64"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Calculate the percentage of rides for each city type.\n",
+    "\n",
+    "ride_percents = 100 * pyber_data_df.groupby([\"type\"]).count()[\"ride_id\"]/ pyber_data_df[\"ride_id\"].count()\n",
+    "\n",
+    "ride_percents"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b3394bb7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Build percentage of rides by city type pie chart.\n",
+    "\n",
+    "plt.subplots(figsize=(10, 6))\n",
+    "\n",
+    "plt.pie(type_percents,\n",
+    "        \n",
+    "       labels=[\"Rural\", \"Suburban\", \"Urban\"],\n",
+    "        \n",
+    "       colors=[\"gold\", \"lightskyblue\", \"lightcoral\"],\n",
+    "        \n",
+    "       explode=[0, 0, 0.1],\n",
+    "       \n",
+    "       autopct='%1.1f%%',\n",
+    "       \n",
+    "       shadow=True, startangle=150)\n",
+    "\n",
+    "plt.title(\"% of Total Fares by City Type\")\n",
+    "\n",
+    "# Change the default font size from 10 to 14\n",
+    "\n",
+    "mpl.rcParams['font.size'] = 14\n",
+    "\n",
+    "# Save Figure\n",
+    "\n",
+    "plt.savefig(\"analysis/Fig5.png\")\n",
+    "\n",
+    "# Show figure\n",
+    "\n",
+    "plt.show()\n"
+   ]
   }
  ],
  "metadata": {
